# pcd_registration

./: .gitignore  Dockerfile  README.md  pyproject.toml
research/: prototype_open3d.py
src/: FPFHFeature.py  draw.py  exp_init_registration.py  icp.py  main.py  preprocessing.py  ransac.py  result_output.py  utils.py
