[project]
name = "intern-homework-alg-teradashun"
version = "0.1.0"
description = ""
authors = [
    {name = "teradashun",email = "s.terada0215@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "open3d (>=0.19.0,<0.20.0)"
]
